--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Wei9023/data-structures-and-algorithms#readme",
   "dependencies": {
     "eslint": "^5.15.3",
-    "jest": "^24.5.0"
+    "jest": "^24.5.0",
+    "lint": "^1.1.2"
   }
 }
