--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "lint": "eslint **/*.js",
-    "test": "jest --coverage --verbose --testPathIgnorePatterns code-challenges/301/",
+    "test": "jest --coverage --verbose --testPathIgnorePatterns code-challenges",
     "test-watch": "jest --watchAll --verbose --coverage",
     "jsdoc": "jsdoc -c ./docs/config/jsdoc.config.json"
   },
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/Wei9023/data-structures-and-algorithms#readme",
   "dependencies": {
-    "eslint": "^5.15.3",
+    "eslint": "^5.16.0",
     "jest": "^24.5.0",
     "lint": "^1.1.2"
   }
